# elevation_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: environment.launch
script/: map_gen.py
script/resources/: test.world  texture_resize.ipynb
worlds/: map_1.world
